crates/schema/tests/compile_fail/derive_default_type_mismatch.stderr
error: #[param(default = ..)]: field expects a bool literal, got non-bool literal
  --> tests/compile_fail/derive_default_type_mismatch.rs:10:5
   |
10 |     flag: bool,
   |     ^^^^

error[E0599]: no function or associated item named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_default_type_mismatch.rs:14:18
   |
 5 | struct Bad {
   | ---------- function or associated item `schema` not found for this struct
...
14 |     let _ = Bad::schema();
   |                  ^^^^^^ function or associated item not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
